# mfv-gis

./: .gitignore  pyproject.toml
data/NYS_Civil_Boundaries.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000001.gdbtablx  a00000004.CatItemsByPhysicalName.atx  a00000004.CatItemsByType.atx  a00000004.FDO_UUID.atx  a00000004.freelist  a00000004.gdbtablx  a00000006.CatRelsByDestinationID.atx  a00000006.CatRelsByOriginID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a00000009.gdbtablx  a0000000a.gdbtable  a0000000a.gdbtablx  a0000000b.gdbtable  a0000000b.gdbtablx  a0000000c.gdbtable  a0000000d.gdbtable  a0000000d.gdbtablx  a0000000d.spx  a0000000e.gdbtable  a0000000e.gdbtablx  a0000000e.spx  a0000000f.gdbtablx  a0000000f.spx  a00000010.gdbtable  a00000011.gdbtable  a00000011.gdbtablx  timestamps
scripts/: db_connection.py  ny.py  pa.py  states.py  utils.py
sql/: municipal_boundaries.sql  state_boundaries.sql
