[project]
name = "mfv-gis"
version = "0.1.0"
description = ""
authors = [
    {name = "mjc0042",email = "mjc0042@gmail.com"}
]
packages = [{include="scripts"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "geoalchemy2 (>=0.18.0,<0.19.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
